--- a/CGAN.ipynb
+++ b/CGAN.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -28,15 +28,7 @@
         "id": "42KewGZ4npi0",
         "outputId": "e5b1e3e5-dab8-4816-ac89-3855b4d2d752"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Standard Libraries\n",
         "import matplotlib.pyplot as plt\n",
@@ -57,8 +49,8 @@
         "from torchvision.utils import make_grid\n",
         "\n",
         "#for colab purposes only\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/gdrive')"
       ]
     },
     {
@@ -72,14 +64,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "BovbyjRhnq1C"
       },
       "outputs": [],
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "logPath='/content/gdrive/MyDrive/Colab Notebooks/GAN/log11'"
+        "logPath='GAN/log11'"
       ]
     },
     {
@@ -93,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "8Qi4cFRznyJs"
       },
@@ -145,64 +137,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "dsGrx7Z9n08k",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "dsGrx7Z9n08k",
         "outputId": "8b1c0ad7-2e91-4a9b-c41f-482d8fbf57d7"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "11.2%"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to data/MNIST/raw/train-images-idx3-ubyte.gz\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
-            "100%|██████████| 9912422/9912422 [00:00<00:00, 156284977.89it/s]"
+            "100.0%\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/train-images-idx3-ubyte.gz to data/MNIST/raw\n"
-          ]
-        },
-        {
           "output_type": "stream",
-          "name": "stderr",
           "text": [
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "Extracting data/MNIST/raw/train-images-idx3-ubyte.gz to data/MNIST/raw\n",
             "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
-            "100%|██████████| 28881/28881 [00:00<00:00, 54639464.96it/s]\n"
+            "100.0%"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
+            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to data/MNIST/raw/train-labels-idx1-ubyte.gz\n",
             "Extracting data/MNIST/raw/train-labels-idx1-ubyte.gz to data/MNIST/raw\n",
             "\n",
             "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
@@ -210,46 +202,22 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
-          "text": [
-            "100%|██████████| 1648877/1648877 [00:00<00:00, 55597110.74it/s]"
-          ]
-        },
-        {
           "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/t10k-images-idx3-ubyte.gz to data/MNIST/raw\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
           "text": [
             "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+            "100.0%\n",
+            "100.0%\n"
           ]
         },
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 4542/4542 [00:00<00:00, 21309316.30it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
+            "Extracting data/MNIST/raw/t10k-images-idx3-ubyte.gz to data/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n",
             "Extracting data/MNIST/raw/t10k-labels-idx1-ubyte.gz to data/MNIST/raw\n",
             "\n"
           ]
@@ -281,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "1NCrAvnSn20v"
       },
@@ -324,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "7a_yDAoyn5PP"
       },
@@ -375,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "gMflz2cdn7Vq"
       },
@@ -399,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "ZxMG3b7kn_Jh"
       },
@@ -482,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "C9x6eSh65nzl"
       },
@@ -534,7 +502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -544,58 +512,12 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Epoch 1 - Discriminator Loss: 0.0015 - Generator Loss: 10.8443\n",
-            "Epoch 2 - Discriminator Loss: 0.0084 - Generator Loss: 5.933\n",
-            "Epoch 3 - Discriminator Loss: 0.1066 - Generator Loss: 9.1138\n",
-            "Epoch 4 - Discriminator Loss: 0.2829 - Generator Loss: 4.3386\n",
-            "Epoch 5 - Discriminator Loss: 0.1418 - Generator Loss: 5.7566\n",
-            "Epoch 6 - Discriminator Loss: 0.3385 - Generator Loss: 2.9577\n",
-            "Epoch 7 - Discriminator Loss: 0.5205 - Generator Loss: 3.0595\n",
-            "Epoch 8 - Discriminator Loss: 0.4873 - Generator Loss: 3.4417\n",
-            "Epoch 9 - Discriminator Loss: 0.6798 - Generator Loss: 2.7812\n",
-            "Epoch 10 - Discriminator Loss: 0.4842 - Generator Loss: 2.7815\n",
-            "Epoch 11 - Discriminator Loss: 0.7647 - Generator Loss: 1.8137\n",
-            "Epoch 12 - Discriminator Loss: 0.601 - Generator Loss: 2.3609\n",
-            "Epoch 13 - Discriminator Loss: 0.8558 - Generator Loss: 1.5876\n",
-            "Epoch 14 - Discriminator Loss: 0.851 - Generator Loss: 1.7583\n",
-            "Epoch 15 - Discriminator Loss: 0.7507 - Generator Loss: 1.8943\n",
-            "Epoch 16 - Discriminator Loss: 0.9273 - Generator Loss: 1.9775\n",
-            "Epoch 17 - Discriminator Loss: 0.8081 - Generator Loss: 2.0136\n",
-            "Epoch 18 - Discriminator Loss: 0.854 - Generator Loss: 1.9446\n",
-            "Epoch 19 - Discriminator Loss: 0.9962 - Generator Loss: 1.4915\n",
-            "Epoch 20 - Discriminator Loss: 0.8409 - Generator Loss: 1.6845\n",
-            "Epoch 21 - Discriminator Loss: 1.1079 - Generator Loss: 1.6242\n",
-            "Epoch 22 - Discriminator Loss: 0.7924 - Generator Loss: 1.5304\n",
-            "Epoch 23 - Discriminator Loss: 0.9398 - Generator Loss: 1.2739\n",
-            "Epoch 24 - Discriminator Loss: 0.7394 - Generator Loss: 0.9698\n",
-            "Epoch 25 - Discriminator Loss: 0.8321 - Generator Loss: 1.6221\n",
-            "Epoch 26 - Discriminator Loss: 1.2735 - Generator Loss: 1.2734\n",
-            "Epoch 27 - Discriminator Loss: 0.8975 - Generator Loss: 1.1951\n",
-            "Epoch 28 - Discriminator Loss: 1.0708 - Generator Loss: 1.2382\n",
-            "Epoch 29 - Discriminator Loss: 1.0435 - Generator Loss: 1.2118\n",
-            "Epoch 30 - Discriminator Loss: 0.9485 - Generator Loss: 1.443\n",
-            "Epoch 31 - Discriminator Loss: 1.0757 - Generator Loss: 1.2326\n",
-            "Epoch 32 - Discriminator Loss: 0.9406 - Generator Loss: 1.3269\n",
-            "Epoch 33 - Discriminator Loss: 0.8725 - Generator Loss: 1.7911\n",
-            "Epoch 34 - Discriminator Loss: 1.1951 - Generator Loss: 1.2365\n",
-            "Epoch 35 - Discriminator Loss: 1.0291 - Generator Loss: 1.4303\n",
-            "Epoch 36 - Discriminator Loss: 1.1218 - Generator Loss: 1.2371\n",
-            "Epoch 37 - Discriminator Loss: 1.244 - Generator Loss: 1.5965\n",
-            "Epoch 38 - Discriminator Loss: 1.0723 - Generator Loss: 1.1417\n",
-            "Epoch 39 - Discriminator Loss: 0.7659 - Generator Loss: 1.6134\n",
-            "Epoch 40 - Discriminator Loss: 1.1348 - Generator Loss: 1.036\n",
-            "Epoch 41 - Discriminator Loss: 0.9764 - Generator Loss: 1.4339\n",
-            "Epoch 42 - Discriminator Loss: 0.8878 - Generator Loss: 1.4691\n",
-            "Epoch 43 - Discriminator Loss: 1.0698 - Generator Loss: 1.4462\n",
-            "Epoch 44 - Discriminator Loss: 1.0107 - Generator Loss: 1.1113\n",
-            "Epoch 45 - Discriminator Loss: 1.1119 - Generator Loss: 1.294\n",
-            "Epoch 46 - Discriminator Loss: 1.0484 - Generator Loss: 1.146\n",
-            "Epoch 47 - Discriminator Loss: 1.1184 - Generator Loss: 1.2514\n",
-            "Epoch 48 - Discriminator Loss: 0.9846 - Generator Loss: 1.0868\n",
-            "Epoch 49 - Discriminator Loss: "
+            "Epoch 1 - Discriminator Loss: 0.0003 - Generator Loss: 12.8884\n",
+            "Epoch 2 - Discriminator Loss: 0.0031 - Generator Loss: 8.3807\n",
+            "Epoch 3 - Discriminator Loss: "
           ]
         }
       ],
@@ -626,8 +548,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "gpuClass": "standard",
     "kernelspec": {
@@ -645,7 +567,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.8"
+      "version": "3.12.2"
     }
   },
   "nbformat": 4,
